# MASS

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  gen-certs.sh  init_db.py  main.py  pyproject.toml  requirements.txt  setup.sh  start.sh
app/: __init__.py  routes.py  security.py
app/admin/: __init__.py  forms.py  routes.py
app/appointments/: __init__.py  forms.py  routes.py
app/auth/: __init__.py  forms.py  routes.py
app/models/: __init__.py  appointment.py  user.py
app/static/css/: style.css
app/templates/: accounts.html  appointments.html  footer.html  forgot.html  index.html  new_appointment.html  register.html  reset.html
mass/: __init__.py  routes.py  security.py
mass/admin/: forms.py  routes.py
mass/appointments/: forms.py  routes.py
mass/auth/: forms.py  routes.py
mass/models/: __init__.py  role.py  user.py
mass/templates/: base.html  edit.html  error.html  header.html  login.html  modal.html  modal_appt.html  new_account.html
nginx/: default.conf
