[project]
name = "mass"
version = "0.1.0"
description = "Medical Appointment Scheduling System"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "blinker==1.9.0",
    "cffi==1.17.1",
    "click==8.1.8",
    "dotenv==0.9.9",
    "flask==3.1.0",
    "flask-login==0.6.3",
    "flask-mail==0.10.0",
    "flask-principal==0.4.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "greenlet==3.2.1",
    "gunicorn==23.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "packaging==25.0",
    "pycparser==2.22",
    "python-dotenv==1.1.0",
    "sqlalchemy==2.0.40",
    "typing-extensions==4.13.2",
    "werkzeug==3.1.3",
    "wtforms==3.2.1",
]
